--- a/src/components/Tags/tags.scss
+++ b/src/components/Tags/tags.scss
@@ -9,7 +9,7 @@
         font-weight: 500;
         font-size: 14px;
 
-        padding: 3px 22px 2px;
+        padding: 6px 22px 5px;
         border-radius: 10px;
 
         margin-right: 10px;
