--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -31,6 +31,13 @@ body {
         line-height: 25.67px;
         font-weight: 400;
     }
+
+    li{
+        color: $primary;
+        font-size: 18px;
+        font-weight: 400;
+        margin-bottom: 15px;
+    }
 }
 
 // Base Style 
